# airbyte-updated-source-primetric-connector

airbyte-integrations/connectors/source-my-test-name/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-my-test-name/source_my_test_name/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-my-test-name/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-primetric/: metadata.yaml
airbyte-integrations/connectors/source-primetric-backup/: acceptance-test-config2.yml  main.py  metadata.yaml  pyproject.toml  pyproject2.txt
airbyte-integrations/connectors/source-primetric-backup/integration_tests/: acceptance.py
airbyte-integrations/connectors/source-primetric-backup/secrets/: config.json  config_last_x_days.json  config_starting_date.json
airbyte-integrations/connectors/source-primetric-backup/source-primetric/: README.md  source.py
airbyte-integrations/connectors/source-primetric-backup/source-primetric/schemas/: employees_certificates.json  reports_custom_data.json
airbyte-integrations/connectors/source-primetric-backup/unit_tests/: test_source.py
airbyte-integrations/connectors/source-primetric/secrets/: config_last_x_days.json  config_starting_date.json
airbyte-integrations/connectors/source-primetric/source_primetric/: source.py
airbyte-integrations/connectors/source-primetric/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
(+5 files in other folders)
